--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+*{
+  font-family: 'Rubik Mono One', sans-serif;
+}
+
 .App {
+  min-height: 100vh;
   width: 100vw;
-  height: 100vh;
   overflow: hidden;
+  background-color: #f0f0f0;
 }
 
