Add btnSocial to personal web

--- a/src/components/MemeGenerator/memeGenerator.css
+++ b/src/components/MemeGenerator/memeGenerator.css
@@ -1,143 +1,150 @@
-.headerContainer{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.headerContainer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-h1{
-    color: #fff;
-    text-shadow: 1px 3px 7px #000;
-    text-transform: uppercase;
-    font-size: 42px;
-    text-align: center;
-    font-weight: 900;
-    font-family: 'Rubik', sans-serif;
-    letter-spacing: 1px;
+h1 {
+  color: #fff;
+  text-shadow: 1px 3px 7px #000;
+  text-transform: uppercase;
+  font-size: 42px;
+  text-align: center;
+  font-weight: 900;
+  font-family: 'Rubik', sans-serif;
+  letter-spacing: 1px;
 }
 
-.logo{
-    margin: 0 10px;
-    width: 50px;
-    animation:  movement 1s infinite alternate-reverse ease-in, invert 1s infinite alternate-reverse ease-in;
+.logo {
+  margin: 0 10px;
+  width: 50px;
+  animation: movement 1s infinite alternate-reverse ease-in,
+    invert 1s infinite alternate-reverse ease-in;
 }
 
-.memeGeneratorContainer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.memeGeneratorContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.memeSettings{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.memeSettings {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.titleText{
-    margin: 25px 0 5px 0;
+.titleText {
+  margin: 25px 0 5px 0;
 }
 
-input{
-    margin: 5px 0 8px 0;
+input {
+  margin: 5px 0 8px 0;
 }
 
-select, input {
-    height: 35px;
-    width: 300px;
-    font-size: 18px;
+select,
+input {
+  height: 35px;
+  width: 300px;
+  font-size: 18px;
 }
 
 button {
-    height: 35px;
-    width: 160px;
-    margin: 5px 0;
-    font-weight: bold;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    background-color: rgb(196, 196, 196);
-    transition: all .3s ease-in-out;
+  height: 35px;
+  width: 160px;
+  margin: 5px 0;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(196, 196, 196);
+  transition: all 0.3s ease-in-out;
 }
 
-
-button:hover{
-    transform: scale(1.02);
-    background-color: rgb(176, 176, 176);
+button:hover {
+  transform: scale(1.02);
+  background-color: rgb(176, 176, 176);
 }
 
-.btnDownload{
-    width: 310px;
-    color: #fff;
-    background-color: rgb(0, 0, 0);
+.btnDownload {
+  width: 310px;
+  color: #fff;
+  background-color: rgb(0, 0, 0);
 }
 
-figure{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 425px ;
-    width: 425px;
-    background-color: #000;
+figure {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 425px;
+  width: 425px;
+  background-color: #000;
 }
 
-.memeImage{
-    height: 400px ;
-    width: 400px;
+.memeImage {
+  height: 400px;
+  width: 400px;
 }
 
-.memeText{
-    position: absolute;
-    margin: auto;
-    bottom: 15px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: #fff;
-    word-wrap: break-word;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 24px;
-    text-shadow: 1px 3px 3px black;
+.memeText {
+  position: absolute;
+  margin: auto;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #fff;
+  word-wrap: break-word;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 24px;
+  text-shadow: 1px 3px 3px black;
 }
 
 /* Animation */
 
 @keyframes movement {
-    from {transform: rotate(15deg);}
-    to {transform: rotate(-25deg);}
+  from {
+    transform: rotate(15deg);
   }
+  to {
+    transform: rotate(-25deg);
+  }
+}
 
-  @keyframes invert {
-   from {filter: invert(0);}
-    to {filter: invert(100%);}
+@keyframes invert {
+  from {
+    filter: invert(0);
   }
+  to {
+    filter: invert(100%);
+  }
+}
 
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 900px) {
+  .logo {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+  }
 
-    .logo{
-        position: absolute;
-        top: 5px;
-        left: 5px;
-    }
+  .memeGeneratorContainer {
+    flex-direction: column;
+    height: auto;
+  }
 
-    .memeGeneratorContainer{
-        flex-direction: column;
-        height: auto;
-    }
+  figure {
+    height: 325px;
+    width: 325px;
+  }
 
-    figure{
-        height: 325px ;
-        width: 325px;
-    }
-
-    .memeImage{
-        height: 300px ;
-        width: 300px;
-    }
-    
+  .memeImage {
+    height: 300px;
+    width: 300px;
+  }
 }
